---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 11 March 2023
  Changes:
    - Changed battery pack capacity from 20MJ to 10MJ
    - Changed battery pack stack size from 100 to 200
    - Removed sulfuric acid from battery pack recipe
    - Increased battery pack charging success rate from 99% to 99.5%
    - Battery pack recipe now allows productivity
    - Rocket control unit recipe now requires a charged battery pack instead of cobalt ingot
    - Satellite recipe now requires charged battery packs instead of uncharged battery packs
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 11 March 2023
  Features:
    - Added seamounts (underwater mountains) which spawn sparsely in deep oceans
    - Added dredging platforms, which can be placed on seamounts to dredge for polymetallic nodules
      - Dredging platforms have a fixed size
      - Underground belts and electric poles cannot be placed on dredging platforms so they should be powered by charged batteries
      - Polymetallic nodules can be processed on-platform into small, but infinite, sources of iron, copper, and stone
      - The player can choose which type of nodule to dredge for
    - Added cobalt ingots, produced from cobalt crust, which can only be obtained by dredging
      - Cobalt processing produces tailings water as a byproduct, from which lead and titanium ore can be obtained
    - Added technologies for battery charging and battery pack
  Changes:
    - Recipe changes:
      - Replaced steel with titanium in big mining drill recipe
      - Added cobalt ingot to battery pack recipe
      - Added cobalt ingot to rocket control unit recipe
      - Added cobalt ingot to titansteel recipe
      - Added titansteel to plutonium atomic bomb recipe
    - Licence changed from MIT to GPLv3
  Bugfixes: